# aoc-2022-rs

./: Cargo.toml  README.md
.devcontainer/: devcontainer.json
src/: lib.rs
src/day_1/: mod.rs  part_1.rs  part_2.rs
src/day_2/: mod.rs  part_1.rs  part_1_attempt_1.rs
